# RepoHerald

./: .gitignore  README.md  config.example.yaml  pyproject.toml
repoherald/: __init__.py  __main__.py  cli.py  config.py  github_fetcher.py  models.py
repoherald/llm/: __init__.py  base.py  claude_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
repoherald/reddit/: auth.py  poster.py
